
Version 0.6-70:

  - parallelization of lnre.bootstrap(), using forked processed on Unix-like platforms
    or with a properly initialized snow cluster (based on the 'parallel' package)
  - bootstrapped confidence intervals in lnre() are speeded up substantially
  - additional productivity measures and some other improvements to productivity.measures()
  - plot.tfl() now also plots relative frequencies (pmw) for comparison across 
    different sample sizes

Version 0.6-66:

  - default minimization algorithm changed to "Nelder-Mead", since "Custom" often
    failed to converge on problematic data sets
  - new default cost function "gof" based on the multivariate chi-squared statistic,
    which is closely related to maximum likelihood estimation
  - parameter optimization now performs multiple runs with different random start
    values by default, improving robustness of the parameter estimation
  - lnre.bootstrap() implements parametric bootstrapping from an LNRE model, and
    the function bootstrap.confint() provides robust estimates of confidence limits
  - rlnre() can directly generate type-frequency lists instead of token vectors, 
    which is much more efficient for large samples (and essential for large-scale
    bootstrapping experiments)
  - bootstrapped confidence intervals for model parameters can be obtained with
    confint() applied to an LNRE model object with bootstrap replicates
  - compute various productivity measures from observed frequency spectrum,
    type-frequency list, vocabulary growth curve or token vector
  - merge() method for two or more type frequency lists
  - new example data sets from Evert & Luedeling (2001) and Baayen (2001)

Version 0.6-10

  - maintenance release for compatibility with new CRAN checks and restrictions
  - zipfR plotting utilities (zipfR.begin.plot, zipfR.end.plot, etc.) are deprecated;
    device="x11" and device="quartz" now both open the default device with dev.new(),