@@ -1,10 +1,10 @@
 Package: zipfR
 Type: Package
 Title: Statistical Models for Word Frequency Distributions
-Version: 0.6-68
+Version: 0.6-69
 Depends: R (>= 3.0.0)
 Imports: methods, utils, stats, graphics, grDevices, parallel
-Date: 2020-09-01
+Date: 2020-09-02
 Author: Stefan Evert <stefan.evert@fau.de>, Marco Baroni <marco.baroni@unitn.it>
 Maintainer: Stefan Evert <stefan.evert@fau.de>
 Description: Statistical models and utilities for the analysis of word frequency distributions.
